# mysql-python-mcp

./: .gitignore  README.md  README_zh.md  pyproject.toml  test_ast_security.py  test_language_adaptation.py  test_stdio.py
mysql_mcp/: __init__.py  __main__.py  mysql_handler.py
